# osig-cli

./: README.md  image_styles.py  image_utils.py  pyproject.toml
src/osig_cli/: __init__.py  image_styles.py  image_utils.py
